# hwp2hwpx

./: .gitignore  README.md  pom.xml  pyproject.toml
src/hwp2hwpx/: __init__.py  cli.py
src/hwp2hwpx/hwp/: __init__.py  reader.py
src/hwp2hwpx/hwpx/: __init__.py  writer.py
src/hwp2hwpx/transform/: __init__.py  converter.py  hwp2hwpx.py  parameter.py
src/hwp2hwpx/util/: __init__.py  binary.py  color.py  compression.py  value_converter.py
test/Multi_Run/: from.hwp  from.hwpx
test/Multi_Run/result/: header.xml  section0.xml
test/arc/: from.hwp  from.hwpx
test/arc/result/: header.xml  section0.xml
test/bookmark/: from.hwp  from.hwpx
test/bookmark/result/: section0.xml
test/button/: from.hwp  from.hwpx
test/button/result/: header.xml  section0.xml
test/check_button/: from.hwp  from.hwpx
test/check_button/result/: header.xml  section0.xml
test/combo_box/: from.hwp  from.hwpx
test/combo_box/result/: section0.xml
test/compose/: from.hwp  from.hwpx
test/compose/result/: header.xml  section0.xml
test/connect_line/: from.hwp  from.hwpx
test/connect_line/result/: section0.xml
test/container/: from.hwp  from.hwpx
test/container/result/: section0.xml
test/curve/: from.hwp  from.hwpx
test/dutmal/: from.hwp  from.hwpx
test/editor/: from.hwp  from.hwpx
test/ellipse/: from.hwp  from.hwpx
test/equation/: from.hwp  from.hwpx
test/field/: from.hwp  from.hwpx
test/footnote_endnote/: from.hwp  from.hwpx
test/header_footer/: from.hwp  from.hwpx
test/hidden_comment/: from.hwp  from.hwpx
test/line/: from.hwp  from.hwpx
test/new_number/: from.hwp  from.hwpx
test/ole/: from.hwp  from.hwpx
test/page_hiding/: from.hwp  from.hwpx
test/page_num/: from.hwp  from.hwpx
test/picture/: from.hwp  from.hwpx
test/polygon/: from.hwp  from.hwpx
test/radio_button/: from.hwp  from.hwpx
test/rectangle/: from.hwp  from.hwpx
test/space_linebreak/: from.hwp  from.hwpx
test/tab_in_para/: from.hwp
test/table/: from.hwp  from.hwpx
test/textart/: from.hwp  from.hwpx
test/빈파일/: from.hwp  from.hwpx
test/여러섹션/: from.hwp  from.hwpx
tests/: conftest.py  test_basic.py  test_integration.py
(+188 files in other folders)
